Fix suggestion input options z-index issues.

--- a/src/components/filterbar/SuggestionInput.css
+++ b/src/components/filterbar/SuggestionInput.css
@@ -26,7 +26,7 @@
   font-size: 16px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  z-index: 200;
+  z-index: 100;
 }
 
 .react-autosuggest__suggestions-container {
